Bug 1817916 - Improve the contrast of the unread indicator in the new folder pane with dark theme. r=aleca a=wsmwk
Differential Revision: https://phabricator.services.mozilla.com/D170486

--- a/mail/themes/shared/mail/about3Pane.css
+++ b/mail/themes/shared/mail/about3Pane.css
@@ -16,7 +16,7 @@
 @media not (prefers-contrast) {
   :root {
     --foldertree-background: var(--sidebar-background-color, var(--color-gray-05));
-    --folderpane-unread-count-background: var(--color-gray-40);
+    --folderpane-unread-count-background: var(--color-gray-50);
     --folderpane-unread-count-text: var(--color-white);
     --folderpane-unread-new-count-background: var(--color-blue-60);
     --treeitem-background-selected: var(--color-gray-20);
@@ -29,8 +29,6 @@
   @media (prefers-color-scheme: dark) {
     :root {
       --foldertree-background: var(--sidebar-background-color, rgba(249, 249, 250, 0.1));
-      --folderpane-unread-count-background: var(--color-gray-50);
-      --folderpane-unread-count-text: var(--color-white);
       --folderpane-unread-new-count-background: var(--color-blue-50);
       --treeitem-background-selected: var(--color-gray-70);
       --treeitem-background-hover: var(--color-gray-60);
